--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,33 +4,26 @@ on:
   release:
     types: [created]
 
-permissions:
-  contents: write
-  packages: write
-
 jobs:
-  releases-matrix:
-    name: Release Windows/AMD64 Binary
+  build-windows-amd64:
+    name: Build and Release for Windows/AMD64
     runs-on: windows-latest
-    strategy:
-      matrix:
-        goos: [windows]
-        goarch: [amd64]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.16
+          go-version: '1.22'
 
       - name: Build Binary
-        run: |
-          go build -o HWIDCHECK.exe -ldflags "-buildvcs=false" main.go
+        run: go build -o HWIDCHECK.exe -ldflags "-buildvcs=false" main.go
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./HWIDCHECK.exe
