--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: '1.22'
 
       - name: Build Binary
-        run: go build -o HWIDCHECK.exe -ldflags "-buildvcs=false" main.go
+        run: go build -o HWIDCHECK.exe main.go
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
